Made RopePoint a record Synced render max rope length